--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Jackie blogs
-subtitle: Work through it, hang in three.
+title: Jackie's blogs
+subtitle: 佛系更新，欢迎交流
 description:
 keywords:
 author: Long Cheng
